set mapper scanner log level to error

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -10,3 +10,5 @@ logging:
   level:
     root: warn
     me.pexcn.demo: info
+    tk.mybatis.spring.mapper.ClassPathMapperScanner: error
+    org.mybatis.spring.mapper.ClassPathMapperScanner: error
