refine & fix warning

--- a/build.gradle
+++ b/build.gradle
@@ -11,20 +11,24 @@ buildscript {
         mapperVersion = '2.0.4'
         pagehelperVersion = '1.2.7'
     }
+
     repositories {
         mavenCentral()
     }
+
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
     }
 }
 
 apply plugin: 'java'
+apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
 group = 'me.pexcn'
 version = '0.0.1'
+
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
@@ -47,6 +51,7 @@ dependencies {
     compile("io.jsonwebtoken:jjwt:${jjwtVersion}")
     compile("mysql:mysql-connector-java:${mysqlVersion}")
 
+    annotationProcessor("org.projectlombok:lombok:${lombokVersion}")
     compileOnly("org.projectlombok:lombok:${lombokVersion}")
 
     testCompile("org.springframework.boot:spring-boot-starter-test")
