--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/demo?useSSL=true&serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8
+    url: jdbc:mysql://localhost:3306/demo?useSSL=true&serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf-8
     username: root
     password: your_password
     driver-class-name: com.mysql.cj.jdbc.Driver
