add user register api & gen id via uuid for comments

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,6 +13,7 @@ mybatis:
 mapper:
   identity: MYSQL
   mappers: me.pexcn.demo.base.BaseMapper
+  before: true
 
 pagehelper:
   auto-dialect: true
